# speechtotext_windows

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: build.yml
apps/app/: Cargo.toml  build.rs
apps/app/examples/: generate_icon.rs
apps/app/src/: always_listen.rs  audio.rs  backend_loader.rs  config.rs  downloader.rs  hotkeys.rs  main.rs  overlay.rs  setup.rs  tray.rs  typer.rs
apps/app/tests/: backend_dll_tests.rs  gpu_support_tests.rs  integration_tests.rs
crates/app-core/: Cargo.toml
crates/app-core/src/: lib.rs
crates/backends/whisper-cpp/: Cargo.toml  manifest.json
crates/backends/whisper-cpp/src/: lib.rs
crates/backends/whisper-ct2/: Cargo.toml  manifest.json
crates/backends/whisper-ct2/src/: lib.rs
docs/: ALWAYS_LISTEN_DESIGN.md  BACKEND_TESTING.md  CLAUDE.md  HANDOVER.md  UI_TESTING.md
tools/cmake/doc/cmake/html/: genindex.html  index.html  search.html  searchindex.js
tools/cmake/doc/cmake/html/_static/: documentation_options.js
tools/cmake/doc/cmake/html/command/: add_compile_definitions.html  add_compile_options.html  add_custom_command.html  add_custom_target.html  add_definitions.html  add_dependencies.html  add_executable.html  add_library.html  add_link_options.html  add_subdirectory.html  add_test.html  aux_source_directory.html  block.html  break.html  build_command.html  build_name.html  cmake_file_api.html  cmake_host_system_information.html  cmake_language.html  cmake_minimum_required.html  cmake_parse_arguments.html  cmake_path.html  cmake_policy.html  configure_file.html  continue.html  create_test_sourcelist.html  ctest_build.html  ctest_configure.html  ctest_coverage.html  ctest_empty_binary_directory.html  ctest_memcheck.html  ctest_read_custom_files.html  ctest_run_script.html  ctest_sleep.html  ctest_start.html  ctest_submit.html  ctest_test.html  ctest_update.html  (+90 more)
tools/scripts/: build.ps1  build_cuda.bat  build_whisper_ct2_cuda_fast.bat  build_win.bat  fix_cuda_path.ps1  generate_checksums.ps1  package.sh  package_only.bat  package_release.bat  package_with_tests.bat
(+1897 files in other folders)
