[workspace]
resolver = "2"
members = [
    "crates/app-core",
    "apps/app",
    "crates/backends/whisper-ct2",
    "crates/backends/whisper-cpp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
strip = true
