[package]
name = "app"
version.workspace = true
edition.workspace = true
description = "Windows speech-to-text tool with system tray integration"

[dependencies]
# Shared FFI types
app-core = { path = "../../crates/app-core" }

# Dynamic library loading for backend plugins
libloading = "0.8"

# Audio capture
cpal = "0.15"

# GUI
tao = "0.30"
tray-icon = "0.17"
softbuffer = "0.4"
image = "0.25"

# Hotkeys
global-hotkey = "0.6"

# Keyboard simulation
enigo = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
dirs = "5.0"
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Networking for model downloads
reqwest = { version = "0.12", features = ["blocking"] }
open = "5"


# File/folder dialog
rfd = "0.15"

# Windows-specific for console icon
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_System_Console", "Win32_Graphics_Gdi", "Win32_System_Threading", "Win32_Foundation", "Win32_Security"] }

